{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 71,
  "lineage": "f712b721-6be3-9dc2-4ad4-df9aa9c439c9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:loadbalancer/app/vpc1-alb-perulegal-prod/d80b0f1ab72b911b",
            "arn_suffix": "app/vpc1-alb-perulegal-prod/d80b0f1ab72b911b",
            "dns_name": "vpc1-alb-perulegal-prod-1981171499.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:543745842878:loadbalancer/app/vpc1-alb-perulegal-prod/d80b0f1ab72b911b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vpc1-alb-perulegal-prod",
            "security_groups": [
              "sg-06fb832577e0f71d0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c04bc61"
              },
              {
                "subnet_id": "subnet-cbf74ca6"
              }
            ],
            "subnets": [
              "subnet-0c04bc61",
              "subnet-cbf74ca6"
            ],
            "vpc_id": "vpc-860ae3eb",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg-alb-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:listener/app/vpc1-alb-perulegal-prod/d80b0f1ab72b911b/2bbafa761ebf2ffc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:targetgroup/vpc1-tg-perulegal-prod/0afaa4deda47e2ab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:543745842878:listener/app/vpc1-alb-perulegal-prod/d80b0f1ab72b911b/2bbafa761ebf2ffc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:loadbalancer/app/vpc1-alb-perulegal-prod/d80b0f1ab72b911b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb-project",
            "aws_alb_target_group.tg-project",
            "aws_security_group.sg-alb-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:listener/app/vpc1-alb-perulegal-prod/d80b0f1ab72b911b/a95f39b2c0ac02e6",
            "certificate_arn": "arn:aws:acm:us-east-1:543745842878:certificate/44c3bf92-74e6-4736-9e5d-b9028a61d090",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:targetgroup/vpc1-tg-perulegal-prod/0afaa4deda47e2ab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:543745842878:listener/app/vpc1-alb-perulegal-prod/d80b0f1ab72b911b/a95f39b2c0ac02e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:loadbalancer/app/vpc1-alb-perulegal-prod/d80b0f1ab72b911b",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb-project",
            "aws_alb_target_group.tg-project",
            "aws_security_group.sg-alb-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543745842878:targetgroup/vpc1-tg-perulegal-prod/0afaa4deda47e2ab",
            "arn_suffix": "targetgroup/vpc1-tg-perulegal-prod/0afaa4deda47e2ab",
            "deregistration_delay": 150,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/backend-status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:543745842878:targetgroup/vpc1-tg-perulegal-prod/0afaa4deda47e2ab",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "vpc1-tg-perulegal-prod",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-860ae3eb"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543745842878:security-group/sg-06fb832577e0f71d0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fb832577e0f71d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc1-alb-perulegal-prod-sg",
            "name_prefix": "",
            "owner_id": "543745842878",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-860ae3eb"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543745842878:security-group/sg-07d80c6866629cc13",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d80c6866629cc13",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "alb-perulegal-prod-sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06fb832577e0f71d0"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "sg-Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-a9c71ad1"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "sg-Jenkins",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-933a2deb"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc1-perulegal-prod-web-sg",
            "name_prefix": "",
            "owner_id": "543745842878",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-860ae3eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-alb-project"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}